--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/components": "^9.9.0",
+    "@vueuse/core": "^9.9.0",
     "vue": "^3.2.45",
     "vuex": "^4.0.2"
   },
