--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "vue": "^3.2.45",
+    "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
