--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@liveblocks/client": "^0.19.2",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
     "vue": "^3.2.45",
