--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@liveblocks/client": "^0.19.2",
     "@vueuse/components": "^9.9.0",
     "@vueuse/core": "^9.9.0",
+    "axios": "^1.2.2",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.1.6",
     "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2"
   },
