--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
+    "vue-scrollto": "^2.20.0",
     "vuedraggable": "^2.24.3",
     "vuex": "^4.0.2"
   },
